--- a/신경망의 수학적 구성 요소/implement.ipynb
+++ b/신경망의 수학적 구성 요소/implement.ipynb
@@ -11,7 +11,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# 굳이 할 필요 없지만, 난 하고 싶으니까\r\n",
     "import numpy as np\r\n",
     "\r\n",
     "from tensorflow.keras.datasets import mnist\r\n",
@@ -23,7 +22,7 @@
     "\r\n",
     "import matplotlib.pyplot as plt\r\n",
     "\r\n",
-    "# %matplotlib inline"
+    "%matplotlib inline"
    ],
    "outputs": [],
    "metadata": {}
@@ -31,7 +30,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1. 신경망과의 첫 만남"
+    "## 1. 신경망과의 첫 만남"
    ],
    "metadata": {}
   },
@@ -135,7 +134,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### 데이터 전처리"
+    "### 데이터 전처리"
    ],
    "metadata": {}
   },
@@ -165,7 +164,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### network"
+    "### network"
    ],
    "metadata": {}
   },
@@ -327,14 +326,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 2. 신경망을 위한 데이터 표현"
+    "## 2. 신경망을 위한 데이터 표현"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "tensor: 데이터를 위한 container, 임의의 차원 개수를 가지는 행렬의 일반화된 형태\r\n",
+    "### tensor\r\n",
+    "\r\n",
+    "- 데이터를 위한 container, 임의의 차원 개수를 가지는 행렬의 일반화된 형태\r\n",
     "- 차원 = 축, 랭크"
    ],
    "metadata": {}
@@ -342,9 +343,10 @@
   {
    "cell_type": "markdown",
    "source": [
+    "#### 1. Scalar (0D tensor)\r\n",
     "\r\n",
-    "1. Scalar (0D tensor): 숫자 하나만 담고 있는 tensor\r\n",
     "- 스칼라 (tensor), 0차원 텐서, 0D 텐서\r\n",
+    "- 숫자 하나만 담고 있는 tensor\r\n",
     "- in numpy, float32, float64 type"
    ],
    "metadata": {}
@@ -393,7 +395,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "2. Vector (1D tensor)\r\n",
+    "#### 2. Vector (1D tensor)\r\n",
+    "\r\n",
     "- 벡터, 1D 텐서"
    ],
    "metadata": {}
@@ -442,7 +445,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "3. Matrix (2D tensor)\r\n",
+    "#### 3. Matrix (2D tensor)\r\n",
+    "\r\n",
     "- 행렬, 2D 텐서\r\n",
     "- 2개의 축 (행-row과 열-column)\r\n",
     "- 숫자가 채워진 사각 격자"
@@ -495,7 +499,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "4. 3D tensor ~\r\n",
+    "#### 4. 3D tensor ~\r\n",
+    "\r\n",
     "- 3D 텐서는 숫자가 채워진 직육면체 형태로 해석할 수 있다."
    ],
    "metadata": {}
@@ -558,13 +563,123 @@
   {
    "cell_type": "markdown",
    "source": [
-    "핵심\r\n",
+    "#### 핵심\r\n",
     "\r\n",
     "- 축, rank    : np.array(...).ndim\r\n",
     "- 크기, shape : tensor의 축에 따라 얼마나 많은 차원이 있는지, np.array(...).shape\r\n",
     "- 데이터 타입  : np.array(...).dtype\r\n",
     "  - numpy와 여러 library들이 메모리 사전 할당 문제로 가변 길이의 문자열을 지원하지 않는다.\r\n",
     "  - C언어도 아닌데 동적으로 짜면 느려진단 소리로 보인다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "print(train_images.ndim)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "print(train_images.dtype)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "8bit 정수형"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "digit = train_images[4]\r\n",
+    "plt.imshow(digit)\r\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### in numpy"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "slicing: 배열에 있는 특정 원소를 선택하는 것"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "my_slice1 = train_images[10:100]\r\n",
+    "my_slice2 = train_images[10:100, :, :]\r\n",
+    "my_slice3 = train_images[10:100, 0:28, 0:28]\r\n",
+    "print(my_slice1.shape, my_slice2.shape, my_slice3.shape)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "my_slice4 = train_images[4, 14:, 14:]\r\n",
+    "plt.imshow(my_slice4)\r\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "my_slice5 = train_images[4, 7:-7, 7:-7]\r\n",
+    "plt.imshow(my_slice5)\r\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 배치 데이터\r\n",
+    "\r\n",
+    "```batch = train_images[size * n : size * (n + 1)```\r\n",
+    "\r\n",
+    "- 한번에 처리하는 데이터의 양\r\n",
+    "- 딥러닝에서 첫번째 축은 샘플 축이지만, 배치 데이터를 이용할 땐 배치 축(차원)이라 한다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 실제\r\n",
+    "\r\n",
+    "| name | tensor | axis | description |\r\n",
+    "|:----:|:------:|------|-------------|\r\n",
+    "| vector | 2d tensor | (samples, features) | 가장 기본적인 dataset, cell 표현<br />- 나이에 따른 소득세 데이터셋 |\r\n",
+    "| 시계열 or Sequence(주기성) 데이터 | 3d tensor | (samples, timesteps, features) | 시간이나 연속된 순서가 중요할 때 쓰임<br />- 주식 가격 데이터셋, 트윗 데이터셋 |\r\n",
+    "| image | 4d tensor | (samples, height, width, channels)<br />(samples, channels, height, width) | 픽셀을 표현하는 색 차원의 추가<br />- tensorflow: channel-last | Theano\r\n",
+    "| video | 5d tensor | (sampels, frames, height, width, channels)<br />(samples, frames, channels, height, width) |"
    ],
    "metadata": {}
   }
