--- a/신경망의 수학적 구성 요소/implement.ipynb
+++ b/신경망의 수학적 구성 요소/implement.ipynb
@@ -12,6 +12,7 @@
    "execution_count": 1,
    "source": [
     "import numpy as np\r\n",
+    "import tensorflow as tf\r\n",
     "\r\n",
     "from tensorflow.keras.datasets import mnist\r\n",
     "\r\n",
@@ -678,8 +679,230 @@
     "|:----:|:------:|------|-------------|\r\n",
     "| vector | 2d tensor | (samples, features) | 가장 기본적인 dataset, cell 표현<br />- 나이에 따른 소득세 데이터셋 |\r\n",
     "| 시계열 or Sequence(주기성) 데이터 | 3d tensor | (samples, timesteps, features) | 시간이나 연속된 순서가 중요할 때 쓰임<br />- 주식 가격 데이터셋, 트윗 데이터셋 |\r\n",
-    "| image | 4d tensor | (samples, height, width, channels)<br />(samples, channels, height, width) | 픽셀을 표현하는 색 차원의 추가<br />- tensorflow: channel-last | Theano\r\n",
-    "| video | 5d tensor | (sampels, frames, height, width, channels)<br />(samples, frames, channels, height, width) |"
+    "| image | 4d tensor | (samples, height, width, channels)<br />(samples, channels, height, width) | 픽셀을 표현하는 색 차원의 추가<br />- tensorflow: channel-last<br />- Theano: channel-first<br />- Keras는 둘 다 가능 |\r\n",
+    "| video | 5d tensor | (sampels, frames, height, width, channels)<br />(samples, frames, channels, height, width) | 프레임의 연속이고, 컬러니까 |"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3. 신경망의 톱니바퀴: 텐서 연산"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "모든 신경망 연산은 작은 텐서의 연산으로 나타낼 수 있다. 마치 파이나 곱셈을 덧셈으로 표현할 수 있듯이 말이다.\r\n",
+    "\r\n",
+    "- ```keras.layers.Dense(512, activation=\"relu\")```\r\n",
+    "- output = relu(dot(W, input) + b)\r\n",
+    "   - ```dot(W, input)``` | ```Z + b``` | ```relu(Z')```"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 원소별 계산\r\n",
+    "\r\n",
+    "- element-wise operation\r\n",
+    "- numpy 연산은 (System's) BLAS에 위임해 병렬 연산을 처리함.\r\n",
+    "- BLAS: Basic Linear Algebra Subprogram (Fortan or C)\r\n",
+    "- 같은 위치에 있는 얘들끼리 덧셈 및 곱셈을 하는 것."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def naive_add(x, y):\r\n",
+    "    assert len(x.shape) == 2\r\n",
+    "    assert x.shape == y.shape\r\n",
+    "\r\n",
+    "    x = x.copy()\r\n",
+    "    for i in range(x.shape[0]):\r\n",
+    "        for j in range(x.shape[1]):\r\n",
+    "            x[i, j] += y[i, j]\r\n",
+    "    return x"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def naive_relu(x):\r\n",
+    "    assert len(x.shape) == 2\r\n",
+    "\r\n",
+    "    x = x.copy()\r\n",
+    "    for i in range(x.shape[0]):\r\n",
+    "        x[i, j] = max(x[i, j], 0)\r\n",
+    "    return x"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### broadcasting\r\n",
+    "\r\n",
+    "- 큰 tensor의 input에 맞도록 작은 tensor에 (broadcasting 축이라고 부르는) 축이 추가됨.\r\n",
+    "- 작은 tensor가 새 축을 따라서 큰 tensor의 크기에 맞도록 반복됨."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<pre>\r\n",
+    "assert x.shape == (32, 10)\r\n",
+    "assert y.shape == (10,)\r\n",
+    "\r\n",
+    "y.reshape((0, -1))\r\n",
+    "-> y.shape == (1, 10)\r\n",
+    "y[i, :] = y for i in range(x.shape[0])\r\n",
+    "\r\n",
+    "return x + y\r\n",
+    "</pre>"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def naive_add_matrix_and_vector(x, y):\r\n",
+    "    assert len(x.shape) == 2\r\n",
+    "    assert len(y.shape) == 1\r\n",
+    "    assert x.shape[1] == y.shape[0]\r\n",
+    "\r\n",
+    "    x = x.copy()\r\n",
+    "    for i in range(x.shape[0]):\r\n",
+    "        for j in range(x.shape[1]):\r\n",
+    "            x[i, j] += y[i]\r\n",
+    "    return x"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 텐서 곱셈\r\n",
+    "\r\n",
+    "- tensor product\r\n",
+    "- 원소별 연산과 반대로 입력 텐서의 원소들을 결합시킴.\r\n",
+    "- (a, b, c, d) * (d, ) = (a, b, c)\r\n",
+    "- (a, b, c, d) * (d, e) = (a, b, c, e)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def naive_vecetor_dot(x, y):\r\n",
+    "    assert len(x.shape) == 1\r\n",
+    "    assert len(y.shape) == 1\r\n",
+    "    assert x.shape[0] == y.shape[0]\r\n",
+    "\r\n",
+    "    z = 0.\r\n",
+    "    for i in range(x.shape[0]):\r\n",
+    "        z += x[i] * y[i]\r\n",
+    "    return z"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def naive_matrix_vector_dot(x, y):\r\n",
+    "    assert len(x.shape) == 2\r\n",
+    "    assert len(y.shape) == 1\r\n",
+    "    assert x.shape[1] == y.shape[0]\r\n",
+    "\r\n",
+    "    z = np.zeros(x.shape[0])\r\n",
+    "    for i in range(x.shape[0]):\r\n",
+    "        for j in range(x.shape[1]):\r\n",
+    "            z[i] += x[i, j] * y[j]\r\n",
+    "    return z"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def naive_matrix_vector_dot(x, y):\r\n",
+    "    z = np.zeros(x.shape[0])\r\n",
+    "    for i in range(x.shape[0]):\r\n",
+    "        z[i] = naive_vector_add(x[i, :], y)\r\n",
+    "    return z"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def naive_matrix_dot(x, y):\r\n",
+    "    assert len(x.shape) == 2\r\n",
+    "    assert len(y.shape) == 2\r\n",
+    "    assert x.shape[1] == y.shape[0]\r\n",
+    "\r\n",
+    "    z = np.zeros((x.shape[0], y.shape[1]))\r\n",
+    "    for i in range(x.shape[0]):\r\n",
+    "        for j in range(y.shape[1]):\r\n",
+    "            row_x = x[i, :]\r\n",
+    "            column_y = y[:, j]\r\n",
+    "            z[i, j] = naive_vector_dot(row_x, column_y)\r\n",
+    "    return z"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 텐서 크기 변환\r\n",
+    "\r\n",
+    "- 연산 전 전처리 용도랄까.\r\n",
+    "- 대체로 **전치(Transposition)**를 가장 많이 이용"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 텐서 연산의 기하학적 해석\r\n",
+    "\r\n",
+    "- tensor는 곧 vector로 변환될 수 있으므로, 모든 tensor 연산은 n-차원에 대한 좌표 포인트로 이해될 수 있다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 딥러닝의 기하학적 해석\r\n",
+    "\r\n",
+    "- 삼단논법에 의거하여, 딥러닝은 텐서 연산의 확장이고 / 텐서 연산은 그 깊이(복잡함)가 얼마든 기학학적 변환으로 해석될 수 있다.\r\n",
+    "- 따라서, 딥러닝은 복잡한 텐서 연산의 집합체이므로, 기학학적 변환으로 해석될 수 있다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 4. 신경망의 엔진: 그래디언트 기반 최적화"
    ],
    "metadata": {}
   }
