--- a/딥러닝의 기초/신경망의 수학적 구성 요소.ipynb
+++ b/딥러닝의 기초/신경망의 수학적 구성 요소.ipynb
@@ -905,6 +905,137 @@
     "## 4. 신경망의 엔진: 그래디언트 기반 최적화"
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "*W*, *b*: 가중치(weight)이자 훈련되는 파라미터(trainable parameter), 각각 커널(kernel)과 편향(bias)\r\n",
+    "\r\n",
+    "- 초기 가중치 행렬에는 난수로 채워져 있다. (random initialization)\r\n",
+    "\r\n",
+    "피드백 신호에 기초하여 가중치가 점진적으로 조정된다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "gradient update는 신경망에 사용된 모든 연산이 미분 가능(differentiable)하다는 (장)점을 이용한다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 변화율\r\n",
+    "\r\n",
+    "- 연속성이라는 건 f(x) = y가 연결된 함수라서 x의 변화에 따라 y가 같이 변하는 걸 말한다.\r\n",
+    "- 변화율이라는 건 지점 p에 대해서 x에 대한 y의 변화 정도를 말한다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 그래디언트\r\n",
+    "\r\n",
+    "- gradient: 텐서 연산의 변화율, 수학적으로 말하면 기울기 또는 기울기의 행렬\r\n",
+    "- *W1 = W0 - step \\* gradient(f)(W0)*\r\n",
+    "- step: W0에서 너무 크게 벗어나지 않기 위한 scaling ratio"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 확률적 경사 하강법, SGD\r\n",
+    "\r\n",
+    "- 통계에서 최솟값을 찾는 방식은 수학의 극솟값을 찾는 방식과 동일하다.\r\n",
+    "- 그러나 미지수가 10개 넘어가는 다중 모델에서는 n차 식에 대한 연립방정식이 되기에 이와 같은 것이 불가능하다.\r\n",
+    "- 그래서 기울기가 0이 되는 지점을 향해 점진적으로 나아가도록 학습시킨다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "training loop (mini-batch stochastic gradient descent)\r\n",
+    "\r\n",
+    "> 확률적 = 무작위의 과학적 표현\r\n",
+    "\r\n",
+    "1. 훈련 샘플 x와 이에 상응하는 타깃 y의 배치를 추출합니다.\r\n",
+    "2. x를 사용하여 네트워크를 실행하고(정방향 패스(forward pass) 단계), 예측 y_pred를 구합니다.\r\n",
+    "3. y_pred와 y의 차이를 측정하여 이 배치에 대한 네트워크의 손실을 계산합니다.\r\n",
+    "4. 네트워크의 파라미터에 대한 손실 함수의 그래디언트를 계산합니다(역방향 패스(barckward pass)).\r\n",
+    "5. 그래디언트의 반대 방향으로 파라미터를 조금 이동시킵니다. 예를 들어, *W -= step \\* gradient*처럼 하면 배치에 대한 손실이 조금 감소할 것입니다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- 반복마다 하나의 샘플과 하나의 타깃을 이용 -> (true) SGD\r\n",
+    "- 가용한 모든 데이터를 사용하여 반복 -> batch SGD\r\n",
+    "- 이 둘의 절충안이 mini-batch SGD\r\n",
+    "\r\n",
+    "다른 optimizer로는 Momentum, Adagrad, RMSProp, Adam etc."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "저차원 표현으로 얻은 직관이 실전과 항상 맞지 않는다는 것을 유념해야 한다.\r\n",
+    "> 대표적으로 신경망 알고리즘이 지역 최솟값에 쉽게 갇힐 것으로 생각했지만, 고차원 공간에서는 대부분 안장점(saddle point)으로 나타나고 지역 최솟값은 매우 드뭅니다. 예를 들어 1,000개의 파라미터가 있는 공간에서 변화율이 0인 지점의 모든 파라미터가 최솟값일 가능성은 2<sup>-1000</sup>입니다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "past_velocity = 0.\r\n",
+    "momentum = 0.1 # momentum ratio는 0.9를 보편적으로 사용\r\n",
+    "while loss > 0.01:\r\n",
+    "    w, loss, gradient = get_current_parameters()\r\n",
+    "    velocity = momentum * past_velocity - learning_rate * gradient\r\n",
+    "    # w = w + velocity # 기본\r\n",
+    "    w = w + momentum * velocity - learning_rate * gradient # Nesterov Momentum, momentum 두 번 반복\r\n",
+    "    past_velocity = velocity\r\n",
+    "    update_parameter(w)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 역전파 알고리즘\r\n",
+    "\r\n",
+    "- back propagation, 후진 모드 자동 미분 (reverse_mode automatic differentiation)\r\n",
+    "- 최종 손실 값에서부터 각 파라미터가 기여한 정도를 계산하기 위해 연쇄 법칙을 적용하여 최상위 층에서 하위 층까지 거꾸로 진행"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 5. 첫번째 예제 다시 살펴보기\r\n",
+    "\r\n",
+    "- epoch: 전체 훈련 데이터에 수행되는 각 반복\r\n",
+    "- > 훈련 샘플이 6만 개, 배치 사이즈를 128로 했다면, 60,000 = 468 * 128 + 96 (마지막 배치)로 배치 갯수는 469개이다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 6. 요약\r\n",
+    "\r\n",
+    "- 학습은 훈련 데이터 샘플과 그에 상응하는 타깃의 손실 함수를 최소화하는 파라미터의 조합을 찾는 것.\r\n",
+    "- 전체 학습 과정은 미분 가능한 텐서 연산으로 연결되어 있기에 가능. 현재 파라미터와 배치 데이터를 그래디언트 값에 매핑해 주는 그래디언트 함수를 구성하기 위해 미분의 연쇄 법칙을 사용"
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
